base/deployment-be.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myprofile-backend
spec:
  selector:
    matchLabels:
      app: myprofile-backend
  template:
    metadata:
      labels:
        app: myprofile-backend
    spec:
      containers:
        - name: myprofile-backend
          image: 139080726045.dkr.ecr.us-east-1.amazonaws.com/backend:f66b6debad254a388aff547e08cd78ba03bdbe98
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 400Mi
          ports:
            - containerPort: 8000
