base/deployment-fe.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myprofile-frontend
spec:
  selector:
    matchLabels:
      app: myprofile-frontend
  template:
    metadata:
      labels:
        app: myprofile-frontend
    spec:
      containers:
        - name: myprofile-frontend
          image: 139080726045.dkr.ecr.us-east-1.amazonaws.com/frontend:b769ed405899859dfbdc89530a17f7115a8b9dac
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 400Mi
          ports:
            - containerPort: 3000
