base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
spec:
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
        - name: todo
          image: 139080726045.dkr.ecr.us-east-1.amazonaws.com/gitops:c8f2347ed216383971f9380957a03c115c1ce6e9
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 400Mi
          ports:
            - containerPort: 8000
