base/database.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myprofile-backend-db
  labels:
    app: myprofile-backend-db
spec:
  selector:
    matchLabels:
      app: myprofile-backend-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: myprofile-backend-db
    spec:
      containers:
      - image: mysql:8.0
        name: myprofile-backend-db
        ports:
        - containerPort: 3306
          name: mysql

---
apiVersion: v1
kind: Service
metadata:
  name: myprofile-backend-db-service
spec:
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  selector:
    app: myprofile-backend-db
