base/service-be.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myprofile-backend-service
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  selector:
    app: myprofile-backend
