base/service-fe.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myprofile-frontend-service
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    app: myprofile-frontend
