base/service.yaml
---
  apiVersion: v1
  kind: Service
  metadata:
    name: todo-service
  spec:
    type: ClusterIP
    ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
    selector:
      app: todo
