base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myprofile-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/group.name: myprofile
    alb.ingress.kubernetes.io/group.order: '1'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: app.chisomejim.click
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: myprofile-frontend-service
                port:
                  number: 3000
    - host: api.chisomejim.click
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: myprofile-backend-service
                port:
                  number: 8000
